# MalikaPerekup

./: .env.example  .gitignore  CLAUDE.md  PRE_DEPLOY_AUDIT.md  PROJECT.md  README.md  REBUILD.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_shops.py  0003_create_counterparties.py  0004_create_devices.py  0005_create_purchases.py  0006_create_sales.py  0007_create_installments.py  0008_create_notifications.py  0009_create_admin.py  0010_create_cbu_rate_cache.py  0011_add_device_defects.py  0012_add_files_cleaned_flag.py  0013_create_catalog_models.py  0014_add_catalog_purchase_count.py  0015_create_attachments.py  0016_counterparty_pin_and_notes.py  0017_add_user_notify_chat.py  0018_create_backup_tables.py  0019_add_user_is_blocked.py  0020_add_user_avatar.py  0021_add_user_contact_note.py  49fabfdbeb26_add_tenants_table_and_user_tenant_id_.py  f70a674c3c35_create_users_table.py
backend/app/: config.py  db.py  main.py
backend/app/common/: dates.py  i18n.py  money.py  pagination.py  qr.py  ratelimit.py  storage.py
backend/app/core/: config.py  database.py  deps.py  logging.py  metrics.py  security.py  sentry.py
backend/app/i18n/: ru.json  uz.json
backend/bot/: main.py  scheduler.py
backend/bot/handlers/: start.py
backend/bot/jobs/: cleanup_deleted_files.py
backend/scripts/: backup.py  create_admin.py  restore.py  seed_demo.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin.py  test_admin_management.py  test_avatars.py  test_backup_api.py  test_backup_retention.py  test_backup_roundtrip.py  test_backup_schedule.py  test_backup_split.py  test_breakdown.py  test_cascade_delete.py  test_catalog.py  test_counterparty_aggregates.py  test_counterparty_docs.py  test_dashboard_delta.py  test_device_photo_urls.py  test_device_suggestions.py  test_devices_filters.py  test_devices_list_with_purchase.py  test_exchange_rate_hint.py  test_export_table.py  test_full_cycle.py  test_imei_check.py  test_installments_buyer_contact.py  test_installments_validation.py  test_multi_tenancy.py  test_nasiya_debt.py  test_notification_prefs.py  test_notifications_pipeline.py  test_owner_contact.py  test_period_profit_series.py  test_price_hint.py  test_purchase_last.py  test_recent_models.py  test_report_delivery.py  test_sale_with_installment.py  test_user_blocking.py
backend/tests/unit/: test_cbu_rate.py  test_money.py  (+7 more)
(+371 files in other folders)
