[project]
name = "malika-perekup-backend"
version = "0.1.0"
description = "Backend for Malika Perekup — accounting system for electronics resellers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "aiogram>=3.13.1",
    "qrcode[pil]>=8.0",
    "pillow>=11.0.0",
    "minio>=7.2.10",
    "redis>=5.2.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "sentry-sdk[fastapi]>=2.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses Depends() in default arguments — that is fine.

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
